# reduced-order-modeling-erd

./: .gitignore  .pre-commit-config.yaml  README.md  new-branch-test.txt  pyproject.toml
control/: pyproject.toml
erd_fipy/: closures.py  io.py  pdes.py  pyproject.toml  run_demo.py  stepping.py
erd_fipy/erd_fipy/: __init__.py  closures.py  config.py  fields.py  mesh.py  pdes.py
erd_fipy/scripts/: run_demo.py
model/: pyproject.toml
outputs/: demo_run.h5
