[project]
name = "erd-capstone"
version = "0.0.0"
requires-python = ">=3.10"
description = "ERD capstone workspace (datagen / model / control)"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "h5py>=3.15.1",
    "numpy>=2.2.6",
]

[tool.uv.workspace]
members = ["erd_fipy", "model", "control"]

[dependency-groups]
dev = [
  "pre-commit",
  "ruff",
  "black",
  "mypy",
  "pytest",
  "pytest-cov",
  "ipykernel"
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
