[project]
name = "erd-control"
version = "0.1.0"
description = "Closed-loop control (MPC/LQR) around the ROM"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
  "h5py",
  "matplotlib",
  "cvxpy",
]

[project.optional-dependencies]
casadi = ["casadi"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
