[project]
name = "erd-model"
version = "0.1.0"
description = "PySINDy / ROM fitting"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.2",
    "pysindy[cvxpy]>=2.0.0",
    "scipy>=1.13.1",
]

[project.optional-dependencies]
jax = ["jax", "jaxlib"]    # if you later want differentiable variants

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
